--- a/momento/Ballerina.toml
+++ b/momento/Ballerina.toml
@@ -6,3 +6,8 @@ distribution = "2201.10.1"
 
 [build-options]
 observabilityIncluded = true
+
+[[dependency]]
+org = "ballerinax"
+name = "mongodb"
+version = "5.0.0"
